# Whoosh

./: .gitignore  README.md  pyproject.toml  robots.txt
.githooks/: pre-commit
app/: __init__.py  config.py  logging.py  mongo.py
app/forms/: changelog.py  comments.py  posts.py  projects.py  users.py
app/helpers/: changelog.py  comments.py  posts.py  projects.py  users.py  utils.py
app/models/: changelog.py  comments.py  posts.py  projects.py  users.py
app/static/css/: base.css
app/static/js/: base.js
app/static/js/frontstage/: blogpost.js  project.js
app/static/js/main/: signup.js
app/templates/: base.html
app/templates/backstage/: archive.html  changelog.html  edit-project.html  panel.html  posts.html  projects.html  settings.html  theme.html
app/templates/frontstage/: about.html  blog.html  blogpost.html  changelog.html  cover.html  footer.html  gallery.html  home.html  navbar.html  project.html  tag.html
app/templates/main/: 404.html  500.html  landing-page.html  login.html  signup.html  sitemap.xml
app/views/: backstage.py  frontstage.py  main.py
